# CG-sc23-Backend

./: README.md  pyproject.toml
.github/workflows/: api_deploy.yml  api_django_deploy.yml  api_django_test.yml
domo/: manage.py  uwsgi.ini
domo/ads/: admin.py  http_model.py  models.py  urls.py  views.py
domo/ads/migrations/: 0001_initial.py  0002_ads_delete_adsrequest.py  0003_ad_delete_ads.py  0004_ad_site_link.py
domo/ads/tests/: test_get_active_ad_link.py  test_google_callback.py
domo/auths/: admin.py  http_model.py  models.py  urls.py
domo/auths/migrations/: 0001_initial.py  0002_initial.py
domo/auths/tests/: test_password_change.py  test_password_reset.py  (+6 more)
domo/common/: auth.py  const.py  gpt.py  http_model.py  tasks.py
domo/domo_api/: admin.py  const.py  http_model.py  models.py  tasks.py  views.py
domo/domo_base/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
domo/external_histories/: admin.py  apps.py  http_model.py  models.py  urls.py  views.py
domo/milestones/: admin.py  http_model.py  models.py  urls.py  views.py
domo/projects/: admin.py  http_model.py  models.py  urls.py  views.py
domo/reports/: admin.py  http_model.py  models.py  tests.py  urls.py  views.py
domo/resources/: admin.py  http_model.py  models.py  tests.py  urls.py  views.py
domo/task_groups/: admin.py  apps.py  http_model.py  models.py  urls.py  views.py
domo/tasks/: admin.py  http_model.py  models.py  urls.py  views.py
domo/templates/: password_reset_email.html  sign_up_verify_email.html
domo/users/: admin.py  http_model.py  models.py  urls.py  views.py
(+118 files in other folders)
