[tool.poetry]
name = "cg-sc23-backend"
version = "0.1.0"
description = ""
authors = ["Sangwon Ko <evbayooooo@gmail.com>"]
packages = [{include = "cg_sc23_backend"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.7"
django-rest-framework = "^0.1.0"
psycopg2-binary = "^2.9.7"
pydantic = "^2.4.0"
uwsgi = "^2.0.22"
black = "^23.10.0"
isort = "^5.12.0"
coverage = "^7.3.2"
email-validator = "^2.1.0"
boto3 = "^1.28.70"
django-storages = "^1.14.2"
pillow = "^10.2.0"
tblib = "^3.0.0"
requests = "^2.31.0"
google-auth = "^2.23.3"
google-auth-oauthlib = "^1.1.0"
sentry-sdk = {extras = ["django"], version = "^1.32.0"}
celery = "^5.3.4"
openai = "^1.3.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
skip = [".gitignore", "migrations"]
profile = "black"